--- a/webDev3/styles.css
+++ b/webDev3/styles.css
@@ -8,6 +8,24 @@
     align-items: center;
 } */
 
+#parent {
+    height: 400px;
+    width: 450px;
+    border: 5px solid black;
+    color: firebrick;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.child {
+    height: 100px;
+    width: 100px;
+    border: 2px dashed #9ABD97;
+    text-align: center;
+    line-height: 100px;
+}
+
 /* .child {
     height: 100px;
     width: 100px;
